[style-fix] In mobile BottomNavigation it covered the content

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -3,6 +3,7 @@
 }
 
 #leaf-dashboard {
+    margin-bottom: 8rem;
 
     & .main-panel {
         margin: 0 auto;
